f-fix long title overflow bug

--- a/front/src/components/AdventureSmall/adventureSmall.scss
+++ b/front/src/components/AdventureSmall/adventureSmall.scss
@@ -9,6 +9,7 @@
   .adventureSmall-title {
     font-weight: bold;
     text-transform: uppercase;
+    overflow-wrap: break-word;
   }
 
   .adventureSmall-authorAndDate {
